# Counterparty-Margin-Collateral-Agent-v2

./: .gitignore  ACCURACY_TRACKING.md  NORMALIZATION_IMPACT_GUIDE.md  README.md  response.json  sample_collateral.csv  sample_collateral_improved.csv  test_accuracy.py  test_normalization_impact.py
backend/: .env.example  .gitignore  README.md  openapi.json  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/api/: analytics.py  calculations.py  collateral.py  documents.py  exports.py  formula_analysis.py  script_generation.py
backend/app/core/: calculator.py
backend/app/models/: agent_schemas.py  formula_schemas.py  normalized_collateral.py  schemas.py
backend/app/services/: accuracy_validator.py  ade_mapper.py  ade_service.py  collateral_matcher.py  collateral_normalizer.py  collateral_parser.py  csa_extraction_schema.json  job_manager.py  llm_service.py  normalization_impact_analyzer.py  normalization_orchestrator.py  pattern_extraction_service.py  pipeline_orchestrator.py  table_builder.py
backend/app/utils/: constants.py  file_storage.py  normalizer.py  pdf_generator.py
backend/data/: matcher_debug_prompt.txt  matcher_debug_response.txt
backend/data/formula_patterns/: patterns_13d14760-3400-46c2-b878-0e0995b18110.json  patterns_51bfafd5-8b71-4e02-8638-331cf2227a68.json  patterns_e5b0e93d-cde1-4916-97fa-4a9778c0142c.json
backend/tests/: test_agents.py  test_calculator.py  test_clause_agent.py  test_infinity_serialization.py  test_script_generator_agent.py
backend/tests/benchmarks/: __init__.py  test_accuracy_benchmark.py
(+105 files in other folders)
